# db_cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.sh
db_cli/: psql.py
tests/: test_records.py  test_tables.py
